Fix display of favorite icon on iOS
The heart was cut off at the right, adjusting the font size fixes that.

--- a/src/index.less
+++ b/src/index.less
@@ -242,7 +242,7 @@ footer {
   align-content: center;
   position: absolute;
   right: 0.5em;
-  font-size: 90%;
+  font-size: 100%;
   border: none;
   background: transparent;
   transition: all ease-in-out 0.3s;
